.App 레이어 가운데 정렬

--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,10 @@
         top: 50%;
         right: 50%;
       }
+      #root{
+        display: flex;
+        justify-content: center;
+      }
     </style>
   </head>
   <body>
